Remove index.html, static.yml, and update README.md and site.yml to reflect changes in Blinko Sites API structure and data. The index.html file containing the API logic has been deleted, and the README has been simplified by removing API usage examples. The site.yml has been updated to include new tags and removed outdated site entries.

--- a/site.yml
+++ b/site.yml
@@ -5,13 +5,5 @@ sites:
     tags: 
       - demo
       - official
+      - english
     created_at: "2024-01-14"
-    category: "Official"
-    
-  - title: "Blinko Community"
-    url: "https://community.blinko.space"
-    description: "Blinko community instance"
-    tags:
-      - community
-    created_at: "2024-01-14"
-    category: "Community" 
