Update README.md and site.yml to include site logos and instructions for adding sites

--- a/site.yml
+++ b/site.yml
@@ -2,6 +2,7 @@ sites:
   - title: "Blinko Demo"
     url: "https://blinko.up.railway.app"
     description: "Official Blinko demo site"
+    image: "https://blinko.up.railway.app/api/file/Square310x310Logo_1736850064147.png"
     tags: 
       - demo
       - official
