--- a/.github/workflows/generate-index.yml
+++ b/.github/workflows/generate-index.yml
@@ -8,11 +8,16 @@ on:
     - cron: '0 * * * *'  # Run every hour
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -44,7 +49,7 @@ jobs:
           
       - name: Commit and push if changed
         run: |
-          git config --global user.name 'GitHub Action'
-          git config --global user.email 'action@github.com'
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add index.json
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Update index.json" && git push) 
+          git diff --quiet && git diff --staged --quiet || (git commit -m "chore: update index.json [skip ci]" && git push) 
