--- a/.github/workflows/generate-index.yml
+++ b/.github/workflows/generate-index.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyyaml
+          pip install pyyaml requests
           
       - name: Generate index.json
         run: |
@@ -35,13 +35,41 @@ jobs:
           import os
           import json
           import yaml
+          import requests
+          from urllib.parse import urljoin
+          
+          def get_site_info(url):
+              try:
+                  response = requests.get(urljoin(url, "/api/v1/public/site-info"), timeout=5)
+                  if response.ok:
+                      data = response.json()
+                      if "image" in data:
+                          if data["image"] and data["image"].startswith("/"):
+                              return urljoin(url, data["image"])
+                          return data["image"]
+              except:
+                  pass
+              return None
+
+          def check_version(url):
+              try:
+                  response = requests.get(urljoin(url, "/api/v1/public/version"), timeout=5)
+                  if response.ok:
+                      return response.json()
+                  return None
+              except:
+                  return None
           
           sites = []
           for filename in os.listdir("sites"):
               if filename.endswith(".yml"):
                   with open(os.path.join("sites", filename), "r", encoding="utf-8") as f:
                       site = yaml.safe_load(f)
-                      sites.append(site)
+                      version = check_version(site["url"])
+                      if version:
+                          site["image"] = get_site_info(site["url"])
+                          site["version"] = version
+                          sites.append(site)
           
           with open("index.json", "w", encoding="utf-8") as f:
               json.dump({"sites": sites}, f, ensure_ascii=False, indent=2)
