--- a/.github/workflows/generate-index.yml
+++ b/.github/workflows/generate-index.yml
@@ -2,8 +2,8 @@ name: Generate Index
 
 on:
   push:
-    paths:
-      - 'sites/**'
+    branches:
+      - main
   schedule:
     - cron: '0 * * * *'  # Run every hour
   workflow_dispatch:
@@ -80,4 +80,4 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add index.json
-          git diff --quiet && git diff --staged --quiet || (git commit -m "chore: update index.json [skip ci]" && git push) 
+          git diff --quiet && git diff --staged --quiet || (git commit -m "chore: update index.json [skip ci]" && git push)
