Update Blinko demo site URL and remove deprecated tag

--- a/sites/blinko-demo.yml
+++ b/sites/blinko-demo.yml
@@ -1,7 +1,6 @@
 title: "Blinko Demo"
-url: "https://blinko.up.railway.app"
+url: "https://blinko-offical.up.railway.app/"
 tags: 
-  - demo
   - official
   - english
 created_at: "2024-01-14"
