--- a/sites/fly.yml
+++ b/sites/fly.yml
@@ -1,6 +1,6 @@
 title: "凌飞阁"
 url: "https://l.llingfei.com"
 tags: 
-  - Chinese    # main language
+  - chinese    # main language
   - blog       # site type
 created_at: "2024-01-14"  # creation date
