--- a/sites/pipu.yml
+++ b/sites/pipu.yml
@@ -1,6 +1,6 @@
 title: "Pipu's BBHub"
 url: "https://blinko.pipu.studio"
 tags: 
-  - english    # main language
-  - blog       # site type
+  - chinese    # main language
+  - knowledge       # site type
 created_at: "2025-02-15"  # creation date
