--- a/sites/my-site.yml
+++ b/sites/my-site.yml
@@ -1,6 +1,6 @@
-title: "bplus.works"
-url: "https://blog.bplusp.xyz/"
+title: "王基权"
+url: "http://www.fibnci.top:51111/share"
 tags: 
   - english    # main language
   - blog       # site type
-created_at: "2025-02-02"  # creation date
+created_at: "2025-04-23"  # creation date
