--- a/sites/pipu.yml
+++ b/sites/pipu.yml
@@ -1,5 +1,5 @@
 title: "Pipu's BBHub"
-url: "https://blinko.pipu.studio"
+url: "https://blinko.pipulab.com"
 tags: 
   - chinese    # main language
   - knowledge       # site type
