--- a/jo.yml
+++ b/jo.yml
@@ -1,6 +1,6 @@
-title: "Drupaltutorials Blanko"
-url: "https:d.drupaltutorials.de"
+title: "量元工作室 笔记"
+url: "https://note.quanmeta.org"
 tags: 
-  - German    # language tag
-  - blog       # site type
+  - Chinese    # language tag
+  - note       # site type
 created_at: "2025-05-23"
