--- a/sites/looksimpler.yml
+++ b/sites/looksimpler.yml
@@ -1,5 +1,5 @@
-title: "looksimpler"
-url: "https://b.lklkl.cn"
+title: "minds"
+url: "https://n.lklk.in"
 tags: 
   - english    # main language
   - blog       # site type
